src/renderer/root/components/AuthenticatedLayout/AuthenticatedLayout.scss
$sidebar-shadow: inset -1px 0 0 #d7d8de;

@mixin sidebar {
  width: 68px;
  background: #edeef2;
  mix-blend-mode: normal;
  box-shadow: $sidebar-shadow;
}

.authenticatedLayout {
  display: flex;
  flex-direction: column;
  height: 100vh;
  background-color: $content-bg-color;

  header {
    display: flex;
    justify-content: stretch;
    align-items: stretch;

    .sidebar {
      @include sidebar;
      flex: 0 0 auto;
      box-shadow: $sidebar-shadow, inset 0 -4px 8px rgba(53, 52, 69, 0.05);

      &.expanded {
        box-shadow: $sidebar-shadow;
      }
    }

    .tabs {
      flex: 1 1 auto;
    }
  }

  main {
    display: flex;

    .sidebar {
      @include sidebar;

      .logo {
        flex: 0 0 auto;
        display: block;
        width: 36px;
        height: 36px;
        margin: -12px 0 12px;
        padding: 3px 16px;
        height: 36px;
        width: 36px;
        box-sizing: content-box;
      }

      .navigation {
        @include sidebar;
        flex: 0 0 auto;
      }
    }
  }

  main {
    flex: 1 1 auto;
    display: flex;
    flex-direction: row;

    .sidebar {
      @include sidebar;
      flex: 0 0 auto;
    }

    .container {
      flex: 1 1 auto;
      display: flex;
      flex-direction: column;

      .addressBar {
        flex: 0 0 auto;
      }

      .content {
        flex: 1 1 auto;
        box-sizing: border-box;
        overflow-y: auto;
        flex: 1;
      }

      .footer {
        flex: 0 0 auto;
        background-color: darken($content-bg-color, 5%);
        opacity: 0.5;
        padding: 0.2rem;
        font-size: 0.8rem;
        font-weight: 300;
        border-top: $primary-border-style;
      }
    }
  }

  &.darwin main .sidebar .logo {
    margin: 0;
  }
}

